--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@docusaurus/core": "2.4.3",
     "@docusaurus/preset-classic": "2.4.3",
     "@mdx-js/react": "1.6",
-    "@vercel/postgres": "^0.5.0",
+    "@vercel/analytics": "^1.0.2",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
