--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/preset-classic": "2.4.3",
-    "@mdx-js/react": "1.6",
-    "@vercel/analytics": "^1.0.2",
-    "axios": "^1.5.1",
+    "@docusaurus/core": "^3.0.1",
+    "@docusaurus/preset-classic": "^3.0.1",
+    "@mdx-js/react": "3.0.0",
+    "@vercel/analytics": "^1.1.1",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "docusaurus2-dotenv": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@tsconfig/docusaurus": "^2.0.1",
-    "dotenv": "^16.3.1",
-    "typescript": "^5.2.2"
+    "@docusaurus/module-type-aliases": "^3.0.1",
+    "@tsconfig/docusaurus": "^2.0.2",
+    "typescript": "^5.3.3"
   },
   "browserslist": {
     "production": [
