--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "docusaurus2-dotenv": "^1.4.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
