--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.4.0",
     "@tsconfig/docusaurus": "^2.0.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.4.5"
   },
   "browserslist": {
@@ -48,5 +51,6 @@
   },
   "description": "My blog with the docs from my projects",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
