--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "@docusaurus/core": "^3.4.0",
     "@docusaurus/preset-classic": "^3.4.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mdx-js/react": "3.0.1",
+    "@mui/material": "^7.1.1",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
